# hammurabi-engine

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
hammurabi_py/: db.sqlite3  main.py  settings.py
hammurabi_py/adapters/django/: guard.py
hammurabi_py/api/: urls.py  views.py
hammurabi_py/config/: settings.py  urls.py
hammurabi_py/core/: engine.py  types.py
hammurabi_py/tests/: test_django_adapter.py  test_engine.py
