[project]
name = "hammurabi-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "maturin>=1.12.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "hammurabi_py.settings"

